--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" />
+								<span class="image main"><img src="images/work.jpg" alt="" />
 									<figcaption>Movie Card (<a href="https://github.com/CatherineNjenga/movie-card"
 										target="_blank">GitHub</a> / <a href="https://youtu.be/sV5KLkQYRcw"
 										target="_blank">Demo</a>)</figcaption>
