--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<!-- <span class="image main"><img src="images/featured1.jpg" alt="" /></span> -->
-								<p> I am a self-taught Software Developer with a background in Finance. I have one year experience working with JavaScript, HTML and CSS. I just built a movie recommendation <a href="https://github.com/CatherineNjenga/movie-card" target="_blank">website </a>based on Studio Ghibli's API while learning React.js on University of Helsinki Full Stack Open <a href="https://github.com/CatherineNjenga/FullStackOpen2022" target="_blank">course</a>.</p>
+								<p> I am a Software Developer with a background in Finance. I have one year experience working with JavaScript, HTML and CSS. I just built a movie recommendation <a href="https://github.com/CatherineNjenga/movie-card" target="_blank">website </a>based on Studio Ghibli's API while learning React.js on University of Helsinki Full Stack Open <a href="https://github.com/CatherineNjenga/FullStackOpen2022" target="_blank">course</a>.</p>
 								<p></p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/work.jpg" alt="" />
+								<span class="image main"><img src="images/work.png" alt="" />
 									<figcaption>Movie Card (<a href="https://github.com/CatherineNjenga/movie-card"
 										target="_blank">GitHub</a> / <a href="https://youtu.be/sV5KLkQYRcw"
 										target="_blank">Demo</a>)</figcaption>
