--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/work.png" alt="" />
 									<figcaption>Movie Card (<a href="https://github.com/CatherineNjenga/movie-card"
-										target="_blank">GitHub</a> / <a href="https://youtu.be/sV5KLkQYRcw"
-										target="_blank">Demo</a>)</figcaption>
+										target="_blank">GitHub</a> / <a href="https://catherinenjenga.github.io/Movie-Card/"
+										target="_blank">Website</a>)</figcaption>
 								</span>
 
 								<p>Movie card is a movies recommendation single page web application based on Studio Ghibli's API. It utilizes a React frontend and Studio Ghibli's RESTful API.</p>
