Updating job title

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Catherine Njenga</h1>
-								<p>Hello! <br> I'm Catherine, a Software Developer.<br>I love being part of a diverse team building accessible, responsive, and problem-solving products.</p>
+								<p>Data Analyst well versed in SQL, Pythoh, Tableau, Power BI, Excel.</p>
 							</div>
 						</div>
 						<nav>
