--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Catherine Njenga</h1>
-								<p>Data Analyst well versed in SQL, Pythoh, Tableau, Power BI, Excel.</p>
+								<p>Data Analyst well versed in SQL, Python, Tableau, Power BI, Excel.</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
 								<li><a href="#about">About</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#education">Courses</a></li>
+								<li><a href="#projects">Projects</a></li>
+								<li><a href="#blog">Blog</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -47,30 +47,88 @@
 								<h2 class="major">About</h2>
 
 								<span class="image main"><img src="images/about.png" alt="" /></span>
-								<p> I am a Software Developer with a background in Finance. I have one year experience working with JavaScript, HTML and CSS. I just built a movie recommendation <a href="https://github.com/CatherineNjenga/movie-card" target="_blank">website </a>based on Studio Ghibli's API while learning React.js on University of Helsinki Full Stack Open <a href="https://github.com/CatherineNjenga/FullStackOpen2022" target="_blank">course</a>.</p>
+								<p> I am a Data Analyst with a background in Finance</a>.</p>
 
 								<p></p>
 							</article>
 
-						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Work</h2>
+						<!-- Projects -->
+							<article id="projects">
+								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/work.png" alt="" />
-									<figcaption>Movie Card (<a href="https://github.com/CatherineNjenga/movie-card"
+									<figcaption>Pharmacy Locator (<a href="https://github.com/CatherineNjenga/movie-card"
 										target="_blank">GitHub</a> / <a href="https://catherinenjenga.github.io/Movie-Card/"
 										target="_blank">Website</a>)</figcaption>
 								</span>
 
-								<p>Movie card is a movies recommendation single page web application based on Studio Ghibli's API. It utilizes a React frontend and Studio Ghibli's RESTful API.</p>
+								<p>Pharmacy Locator is</p>
 							</article>
 
-						<!-- About -->
-							<article id="education">
-								<h2 class="major">Courses</h2>
-								<span class="image main"><a href = "https://github.com/CatherineNjenga/FullStackOpen2022" target="_blank" ><img src="images/Helsinki01.png" width= 100 height =200 alt="" /></a></span>
-								<p>Full Stack Open/ University of Helsinki</p>
-								<p>The course introduces modern web application development with JavaScript. The main focus is on single page applications implemented with the React library, and REST interfaces implemented with Node.js that support them. The course also introduces an alternative implementation principle to GraphQL, or REST.</p>
-								<p>The course also covers application testing, configuration and management of runtime environments, and the use of the MongoDB database to store application data.</p>
+						<!-- Blog -->
+							<article id="blog">
+								<h2 class="major">Blog</h2>
+								<!-- <a
+									href="https://stephenandersondev.medium.com/what-are-geographic-information-systems-gis-a66dfbcfe2dd"><span
+										class="image main"><img src="https://miro.medium.com/max/700/1*tG7jc_hHbjr2lxZt_EVcOA.jpeg"
+											alt="" /></span>
+									<h4>What are Geographic Information Systems (GIS)? | Dec 11th, 2020</h4>
+								</a>
+								<p>I recently interviewed for a Software Engineering position with a company that specializes in
+									Geographic Information Systems (GIS). Before researching this company, I had never even heard the
+									term, but after looking into the company I was blown away by the product they had created and what
+									it could do. When interviewing with the company I learned even more about GIS and how it's made and
+									what it's used for, this really piqued my interest so I had to learn more! This is what I found.
+								</p>
+								<hr>
+								<a href="https://levelup.gitconnected.com/covid-and-coding-aba165448615"><span class="image main"><img
+											src="https://miro.medium.com/max/700/0*adYzPvPwmr2WH3pO" alt="" /></span>
+									<h4>COVID and Coding | Nov 19th, 2020</h4>
+								</a>
+								<p>While progressing into the last few weeks of my software engineering program at Flatiron School, I
+									wrote a blog post on how COVID has affected the world of software engineering. We explore its effect
+									on coding bootcamps, job searching, and working as a software engineer. I was even blessed enough to
+									have it published by "Level Up Coding".
+								</p>
+								<hr>
+								<a
+									href="https://stephenandersondev.medium.com/how-to-build-a-web-developer-portfolio-for-free-part-2-d099ff34f9b2"><span
+										class="image main"><img src="https://miro.medium.com/max/700/1*fEv8it6uJCPWJNMfzTV8MA.jpeg"
+											alt="" /></span>
+									<h4>How to Build a Web Developer Portfolio for Free | Part 2 - Nov 5th, 2020</h4>
+								</a>
+								<p>This is part 2 of my previous post on building a web developer portfolio website for free. This
+									sequel post specifically talks about what content needs to be on your website to build your personal
+									brand, and make you stick out. I was even blessed enough to have it published by "Level Up Coding".
+								</p>
+								<hr>
+								<a href="https://levelup.gitconnected.com/how-to-build-a-web-developer-portfolio-for-free-d456699ecef7"><span
+										class="image main"><img src="https://miro.medium.com/max/700/1*fF-NlNp73sQuOvhvU79xrg.jpeg"
+											alt="" /></span>
+									<h4>How to Build a Web Developer Portfolio for Free | Part 1 - Oct 22nd, 2020</h4>
+								</a>
+								<p>As I neared graduation from my Software Engineering Bootcamp, I realized that I needed to start doing
+									everything I can to get my name out there to potential employers and start building my personal
+									brand. I decided to not only build myself a portfolio website, but I also gave myself the challenge
+									of building and hosting the site for FREE. This blog post explains how I did it, and I was even
+									blessed enough to have it published by "Level Up Coding".</p>
+								<hr>
+								<a href="https://medium.com/swlh/using-git-in-visual-studio-code-2f16fde8406e"><span
+										class="image main"><img src="https://miro.medium.com/max/700/0*Dg_iIbnD3o_OMUrG"
+											alt="" /></span>
+									<h4>Using Git in Visual Studio Code - Oct 7th, 2020</h4>
+								</a>
+								<p>Check out my blog post on using the built-in version controls tools for Visual Studio Code. It breaks
+									down some of the more common git tasks and how they can be done easily and quickly in VS Code. I was
+									even blessed enough to have this blog published by "The Startup" and "Level Up Coding".</p>
+								<hr>
+								<a href="https://medium.com/@stephenandersondev/hiding-your-api-keys-in-ruby-1274a4af3fde"><span
+										class="image main"><img src="https://miro.medium.com/max/700/0*UaUH3y--jgGqJBlQ"
+											alt="" /></span>
+									<h4>Hiding Your API Keys in Ruby - Sept 23rd, 2020</h4>
+								</a>
+								<p>We can find stories everywhere online where an API key was stolen, and all of a sudden the key owner
+									is sent a huge bill for API calls that they never made. In this blog post, I explain how you can
+									easily hide your API keys in Ruby and put the worry in the past.</p> -->
 							</article>
 
 						<!-- Contact -->
