--- a/index.html
+++ b/index.html
@@ -54,14 +54,20 @@
 
 						<!-- Projects -->
 							<article id="projects">
-								<h2 class="major">Projects</h2>
-								<span class="image main"><img src="images/work.png" alt="" />
+								<h2 class="major">Pharmacy Locator <br> Web Scraper In Python</h2>
+								<span class="image main"><img src="images/pharmacy3.jpg" alt="" />
 									<figcaption>Pharmacy Locator (<a href="https://github.com/CatherineNjenga/movie-card"
 										target="_blank">GitHub</a> / <a href="https://catherinenjenga.github.io/Movie-Card/"
 										target="_blank">Website</a>)</figcaption>
 								</span>
-
 								<p>Pharmacy Locator is</p>
+								<h2 class="major">Data Exploration of <br>Northwind Traders in SQL</h2>
+								<span class="image main"><img src="images/Northwind.jpg" alt="" />
+									<figcaption> (<a href="https://github.com/CatherineNjenga/movie-card"
+										target="_blank">GitHub</a> / <a href="https://catherinenjenga.github.io/Movie-Card/"
+										target="_blank">Website</a>)</figcaption>
+								</span>
+								<p>Data exploration</p>	
 							</article>
 
 						<!-- Blog -->
@@ -89,8 +95,8 @@
 									on coding bootcamps, job searching, and working as a software engineer. I was even blessed enough to
 									have it published by "Level Up Coding".
 								</p>
-								<hr>
-								<a
+								<hr> -->
+								<!-- <a
 									href="https://stephenandersondev.medium.com/how-to-build-a-web-developer-portfolio-for-free-part-2-d099ff34f9b2"><span
 										class="image main"><img src="https://miro.medium.com/max/700/1*fEv8it6uJCPWJNMfzTV8MA.jpeg"
 											alt="" /></span>
@@ -100,19 +106,76 @@
 									sequel post specifically talks about what content needs to be on your website to build your personal
 									brand, and make you stick out. I was even blessed enough to have it published by "Level Up Coding".
 								</p>
-								<hr>
-								<a href="https://levelup.gitconnected.com/how-to-build-a-web-developer-portfolio-for-free-d456699ecef7"><span
-										class="image main"><img src="https://miro.medium.com/max/700/1*fF-NlNp73sQuOvhvU79xrg.jpeg"
+								<hr> -->
+								<span
+										class="image main"><img src="images/pharmacy3.jpg"
 											alt="" /></span>
-									<h4>How to Build a Web Developer Portfolio for Free | Part 1 - Oct 22nd, 2020</h4>
+									<h4>How to Build a Pharmacy Locator Python Web Scraper | Nov 1st, 2023</h4>
 								</a>
-								<p>As I neared graduation from my Software Engineering Bootcamp, I realized that I needed to start doing
-									everything I can to get my name out there to potential employers and start building my personal
-									brand. I decided to not only build myself a portfolio website, but I also gave myself the challenge
-									of building and hosting the site for FREE. This blog post explains how I did it, and I was even
-									blessed enough to have it published by "Level Up Coding".</p>
+								<p>In year 2021, I embarked on a front-end web development self-taught journey. In 2022 I decided to 
+									advance to back-end web development. This is where I was exposed to databases and my interest 
+									in data analysis was sparked.On researching the different paths to this new field, I discovered 
+									Alex The Analyst on youtube and I 'joined' his Youtube Data Analysis Bootcamp.
+									On completing his web scraping with python 'class', I decided to challenge myself to work on
+									a personal project.
+									I was adventurous enough to check web scraping work posted on UpWork and I found the task below.
+								</p>
+								<span class="image main"><img src="images/upwork.png" alt="" /></span>
+								<p>I thought wow $100 to scrape a website, this must be easy.But, I was very wrong.
+									Kindly allow me to take your through the following two weeks of my life as I worked on
+									the three 'easy' steps as listed on the task.</p>
+								<h5>Step One: Go to this website: https://ncpa.org/pharmacy-locator</h5>
+								<span class="image main"><img src="images/NCPA.png" alt="" /></span>
+								<p>
+									Note that it indicates that their database contains 19,400 pharmacies. I took that information lightly
+									until it was time to implement my project.
+								</p>
+								<span class="image main"><img src="images/NCPA_MAP.png" alt="" /></span>
+								<P>
+									Please note that the user is required to input some information specifically City & State OR Zip Code, 
+									choose the radius in miles from a dropdown, choose service category from another dropdown and 
+									finally click on the search button. This takes us to the next step.
+								</P>
+								<h5>Step Two: Scrape from every zip code</h5>
+								<p>
+									On doing a quick search I quickly discovered that there were 41,704 ZIP codes ranging from 00501 to 99950.
+									Please do not be fooled by the familiar word range as I was. I thought that all I needed to do was to simply find all
+									the individual numbers within the ranges. I was wrong again. So being so very resourceful I looked for a website where I could
+									scrape the ZIP codes, easy right?
+								</p>
+								<span class="image main"><img src="images/ZIP_CODES.png" alt="" /></span>
+								<P>
+									I used BeautifulSoup to scrape the ranges from the website and saved the results in an excel worksheet. 
+									My intention was to use SQL to find the individual numbers within the ranges. 
+									I had previously learnt how to use Microsoft SQL server on Alex's class but on doing a quick search 
+									I realized that the function generate_series() would be the most efficient method to get the individual numbers.
+									The generate_series() function in SQL server cannot be used with select clause but PostgreSQL allowed the function
+									to be used with the select clause. So I downloaded PostgreSQL and googled how to use it on the fly. 
+									The process was not easy but I learnt the pros and cons of PostgreSQL and had a hands-on experience. 
+									I imported the excel worksheet to PostgreSQL which I found to be not as easy as it with SQL Server. 
+									The function was actually very easy to use and I got a list of the populated ZIP codes from the ranges. 
+									While testing the codes on the zip locator I realized that not all the derived numbers were valid as ZIP codes. 
+									On further research I found a ZIP codes database set online.
+								</P>
+								<P>
+									I decided to use the available database set to scrape pharmacies for every zip code.
+									I quickly realized that since the task required user input BeautifulSoup would not be sufficient. But Selenium
+									proved to be more useful. I used Selenium's documentation, imported the necessary functionalities and 
+									that leads us to the next step.
+								</P>
+								<h5>Step Three: Provide the available fields (pharmacy name, address, phone number, website, business hours, and services)</h5>
+								<p>
+									This was the most exciting part. With a background in web development, I found myself stuggling with how to
+									read global variable inside a function while coding with python. How to handle timeout errors and hence
+									preventing program crashes. The use of try except blocks instead of try catch blocks.
+									I used time.sleep() function to automate the process of scraping and recording the pharmacy details to a csv file.
+								</p>
+								<p>
+									Thank you for reading this far. If you would like to see the source code, have a look 
+									<a href="https://github.com/CatherineNjenga/LocationScraper">here</a>.
+								</p>
 								<hr>
-								<a href="https://medium.com/swlh/using-git-in-visual-studio-code-2f16fde8406e"><span
+								<!-- <a href="https://medium.com/swlh/using-git-in-visual-studio-code-2f16fde8406e"><span
 										class="image main"><img src="https://miro.medium.com/max/700/0*Dg_iIbnD3o_OMUrG"
 											alt="" /></span>
 									<h4>Using Git in Visual Studio Code - Oct 7th, 2020</h4>
