Updating my socials

--- a/index.html
+++ b/index.html
@@ -47,27 +47,68 @@
 								<h2 class="major">About</h2>
 
 								<span class="image main"><img src="images/about.png" alt="" /></span>
-								<p> I am a Data Analyst with a background in Finance</a>.</p>
-
-								<p></p>
+								<ul>
+									<li>
+										2020: The first case of COVID-19 is reported in Kenya. 
+										Working shorter hours made me consider a career change.
+									</li>
+									<li>
+										2021: resigned and applied for Master of Science in Data Science and Analytics (MSc DSA) 
+										in Strathmore University and got accepted but choose to self-teach. 
+										Learnt HTML, CSS, JavaScript, Python, Git and GitHub.
+									</li>
+									<li>
+										2022: advanced to back-end web development. Learnt NodeJS/Express, MongoDB and PostgreSQL.
+									</li>
+									<li>
+										2023: my interest in Data Science and Analytics is rekindled. 
+										Learnt SQL .Built a pharmacy locator web scraper and published the dataset on Kaggle
+									</li>
+								</ul>
+								<p>
+									I have a lot of experience with SQL, Python, Excel, Tableau and Microsoft Power BI.
+								</p>
 							</article>
 
 						<!-- Projects -->
 							<article id="projects">
-								<h2 class="major">Pharmacy Locator <br> Web Scraper In Python</h2>
+								<h2 class="major">Pharmacy Locator <br> Python Web Scraper</h2>
 								<span class="image main"><img src="images/pharmacy3.jpg" alt="" />
-									<figcaption>Pharmacy Locator (<a href="https://github.com/CatherineNjenga/movie-card"
-										target="_blank">GitHub</a> / <a href="https://catherinenjenga.github.io/Movie-Card/"
-										target="_blank">Website</a>)</figcaption>
+									<figcaption>
+										Photo by <a href="https://unsplash.com/@genefoto?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">
+										Gene Gallin</a> on 
+										<a href="https://unsplash.com/photos/an-aerial-view-of-a-building-with-a-parking-lot-0M2QixqfCU0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">
+										Unsplash</a>
+									</figcaption>
 								</span>
-								<p>Pharmacy Locator is</p>
-								<h2 class="major">Data Exploration of <br>Northwind Traders in SQL</h2>
+								<p>Pharmacy Locator is a Python automated tool that helps in collecting data 
+									of the 19,400 independent community pharmacies as provided on the 
+									National Community Pharmacist Association's website.
+								</p>
+								<nav>
+									<ul>
+										<li><a href="https://github.com/CatherineNjenga/LocationScraper"
+											target="_blank">Get Project</a></li>
+									</ul>
+								</nav>
+								<hr>
+								<h2 class="major">Data Exploration of <br> Northwind Traders <br> with SQL</h2>
 								<span class="image main"><img src="images/Northwind.jpg" alt="" />
-									<figcaption> (<a href="https://github.com/CatherineNjenga/movie-card"
-										target="_blank">GitHub</a> / <a href="https://catherinenjenga.github.io/Movie-Card/"
-										target="_blank">Website</a>)</figcaption>
+									<figcaption>
+										Photo by <a href="https://unsplash.com/@andylid0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">
+										Andy Li</a> on <a href="https://unsplash.com/photos/cargo-ships-docked-at-the-pier-during-day-CpsTAUPoScw?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">
+										Unsplash</a>
+									</figcaption>
 								</span>
-								<p>Data exploration</p>	
+								<p>This is an indepth data exploration of the Microsoft's Northwind Traders
+									database with SQL.
+								</p>
+								<nav>
+									<ul>
+										<li><a href="https://github.com/CatherineNjenga/Northwind"
+											target="_blank">Get Project</a></li>
+									</ul>
+								</nav>	
 							</article>
 
 						<!-- Blog -->
@@ -108,8 +149,15 @@
 								</p>
 								<hr> -->
 								<span
-										class="image main"><img src="images/pharmacy3.jpg"
-											alt="" /></span>
+									class="image main"><img src="images/pharmacy3.jpg"
+									alt="" />
+									<figcaption>
+										Photo by <a href="https://unsplash.com/@genefoto?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">
+										Gene Gallin</a> on 
+										<a href="https://unsplash.com/photos/an-aerial-view-of-a-building-with-a-parking-lot-0M2QixqfCU0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">
+										Unsplash</a>
+									</figcaption>
+								</span>
 									<h4>How to Build a Pharmacy Locator Python Web Scraper | Nov 1st, 2023</h4>
 								</a>
 								<p>In year 2021, I embarked on a front-end web development self-taught journey. In 2022 I decided to 
@@ -219,7 +267,7 @@
 								</form>
 								<ul class="icons">	
 									<li><a href="https://github.com/CatherineNjenga" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="https://www.linkedin.com/in/freshiah-catherine-njenga/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.linkedin.com/in/catherinenjenga/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								</ul>
 							</article>
 
@@ -472,7 +520,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<ul class="icons">
 							<li><a href="https://github.com/CatherineNjenga" class="icon brands fa-github" target="_blank"><span
 										class="label">GitHub</span></a></li>
-							<li><a href="https://www.linkedin.com/in/freshiah-catherine-njenga/" class="icon brands fa-linkedin"
+							<li><a href="https://www.linkedin.com/in/catherinenjenga/" class="icon brands fa-linkedin"
 										target="_blank"><span class="label">LinkedIn</span></a></li>
 						</ul>
 						<p class="copyright">&copy; Catherine Njenga. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
