--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 									</li>
 								</ul>
 								<p>
-									I have a lot of experience with SQL, Python, Excel, Tableau and Microsoft Power BI.
+									To offer you more and better insights on your business's historical position, present performance 
+									and its going concern I use  SQL, Python, Excel, Tableau and Microsoft Power BI.
 								</p>
 							</article>
 
@@ -81,8 +82,8 @@
 										Unsplash</a>
 									</figcaption>
 								</span>
-								<p>Pharmacy Locator is a Python automated tool that helps in collecting data 
-									of the 19,400 independent community pharmacies as provided on the 
+								<p>Pharmacy Locator is a Python automated tool that aids in collecting data
+									of the 19,400 independent community pharmacies listed on the 
 									National Community Pharmacist Association's website.
 								</p>
 								<nav>
