Updating about section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									</li>
 									<li>
 										2023: my interest in Data Science and Analytics is rekindled. 
-										Learnt SQL .Built a pharmacy locator web scraper and published the dataset on Kaggle
+										Learnt SQL .Built a Python pharmacy locator web scraper.
 									</li>
 								</ul>
 								<p>
